# 24-25WaterCode

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
carpMap/: CarpData.csv  Location-of-the-Illinois-River-basin resized base.png:Zone.Identifier  ReadMe.md  carp.py
docker/: Dockerfile  SETUP_GUIDE.md  docker-compose.yaml  docker-run-gpu.sh  docker-run-nvidia.sh  docker-run.sh  enter.sh  install.sh  instructions.md  savecmake  setup.sh  stop.sh
docker/files/: entrypoint.sh  jetson_dot_ssh.tar.bz2
docs/: reconstruction_plan.md
fishROS_ws/src/bar02_pub/: package.xml  setup.cfg  setup.py
fishROS_ws/src/bar02_pub/bar02_pub/: bar02_pub.py
fishROS_ws/src/controller_node/: setup.py
fishROS_ws/src/controller_node/controller_node/: controller_sub.py  holo_ocean_test.py  holoocean_pool.py  sonar_cam_message_converter.py  sonar_sub.py  twist_drivetrain.py
fishROS_ws/src/controller_node/launch/: 2024_compbot_combined.launch.py  controller_launch.py  drivetrain_launch.py  jetson_combined_launch.py  (+2 more)
fishROS_ws/src/drivetrain_package/: setup.cfg
fishROS_ws/src/fish_cam/: setup.py
fishROS_ws/src/imu_publisher/: setup.py
fishROS_ws/src/launch/: launch.py
fishROS_ws/src/pH_pub/: package.xml  setup.cfg  setup.py
fishROS_ws/src/ph_pub/: package.xml  setup.cfg  setup.py
fishROS_ws/src/stabilization_pub/: package.xml  setup.cfg  setup.py
scripts/: ROSStandard.sh  bar02Test.py  command_aliases.sh  deploy.sh  i2cDetect.py  jetson_setup.sh  morseCodeFlasher.py  native_build.sh  pHtest.py  shutdownROV.py  shutdownServo.py  simpleThrusterTest.py  test_servo.py
(+15 files in other folders)
