[project]
name = "24watercode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catkin-pkg>=1.1.0",
    "empy>=4.2",
    "lark-parser>=0.12.0",
    "numpy<2",
    "open3d>=0.19.0",
    "opencv-contrib-python<4.10.0.84",
    "pybind11>=3.0.1",
    "pyyaml>=6.0.3",
    "setuptools>=80.9.0",
    "transforms3d>=0.4.2",
]
